2010-10-12  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/ssh-security.c: don't munge $SSH_CONNETION

2010-10-12  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/swig.m4: add '.' to freebsd versions
	* perl/Makefile.am: spell it -pthread

2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amvault.pl: add fake driver finish first

2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amflush.c: write a "pid done" line when cancelling
	* server-src/amcleanup.pl: run amlogroll internally

2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: remove cont_filename from header before
	  writing to a real volume
	* perl/Amanda/Recovery/Clerk.pm: remove it when restoring, too

2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amvault.pl: update the tests to use --autolabel=any

2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amvault.pl: --autolabel any, not --autolabel all

2010-10-08  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Don't give an error is ssl_ca_info is set
	  and ssl is not used.

2010-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Use property_add_to_argv.
	* client-src/client_util.h (application_property_argv_size):
	  Remove prototype.
	* common-src/conffile.c: Use g_str_amanda_hash and g_str_amanda_equal
	  for property hash.
	* common-src/conffile.c (property_add_to_argv): Remove function
	* common-src/conffile.h (property_add_to_argv): Remove prototype.
	* common-src/glib-util.c (g_str_amanda_hash, g_str_amanda_equal):
	  Add function
	* common-src/glib-util.h (g_str_amanda_hash, g_str_amanda_equal):
	  Add prototype.
	* common-src/util.c (proplist_add_to_argv, property_add_to_argv):
	  Add function.
	* common-src/util.h (proplist_add_to_argv, property_add_to_argv):
	  Add prototype.
	* perl/Amanda/Config.pod: Document amandaify_property_name.