@@ -84,6 +84,12 @@ main (int ac, char *av[])
 			dump_settings();
 			return 0;
 		}
+
+		/* exit when our stdin goes away */
+		g_debug("will exit on EOF from stdin");
+		g_thread_init(NULL);
+		g_thread_create(exit_on_stdin_eof_thread, NULL, FALSE, NULL);
+
 		ndma_daemon_session (&the_session, p_ndmp_port, the_mode == NDM_JOB_OP_TEST_DAEMON);
 		return 0;
 	}
